[package]
name = "hillenbrand"
version = "0.1.0"
authors = ["James Millard <millard.jn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.3"
ndarray =  { version = "0.14", features = ["rayon"]}
rustfft = "5"
num-integer = "0.1"

[dev-dependencies]
palette = "0.5.0"
image = "0.23"